--- a/schedule_planner/SchedulePlanner/src/main/resources/pl/bolka/aleksander/schedule/planner/fx/fxml/AddDataChoose.fxml
+++ b/schedule_planner/SchedulePlanner/src/main/resources/pl/bolka/aleksander/schedule/planner/fx/fxml/AddDataChoose.fxml
@@ -12,6 +12,6 @@
       <Button fx:id="addGroup" layoutX="56.0" layoutY="211.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="150.0" text="Grupy" />
       <Button fx:id="addDay" layoutX="607.0" layoutY="211.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="150.0" text="Dni" />
       <Button fx:id="addRoom" layoutX="422.0" layoutY="211.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="150.0" text="Sale" />
-      <Button fx:id="mainMain" layoutX="329.0" layoutY="394.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Główne menu" />
+      <Button fx:id="mainMenu" layoutX="329.0" layoutY="394.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Główne menu" />
    </children>
 </AnchorPane>
