--- a/schedule_planner/SchedulePlanner/src/main/resources/pl/bolka/aleksander/schedule/planner/fx/fxml/AddDataLecturers.fxml
+++ b/schedule_planner/SchedulePlanner/src/main/resources/pl/bolka/aleksander/schedule/planner/fx/fxml/AddDataLecturers.fxml
@@ -9,9 +9,10 @@
       <TextField fx:id="lastName" layoutX="218.0" layoutY="126.0" promptText="nazwisko" />
       <TextField fx:id="universityDegree" layoutX="218.0" layoutY="169.0" promptText="tytuł" />
       <TableView fx:id="subjectTable" layoutX="427.0" layoutY="78.0" prefHeight="265.0" prefWidth="150.0" />
-      <TableView fx:id="facultyTable" layoutX="598.0" layoutY="78.0" prefHeight="265.0" prefWidth="150.0" />
-      <Button fx:id="add" layoutX="279.0" layoutY="213.0" mnemonicParsing="false" text="Dodaj" />
+      <Button fx:id="change" layoutX="328.0" layoutY="265.0" mnemonicParsing="false" text="Zmień" />
       <Button fx:id="back" layoutX="237.0" layoutY="362.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="122.0" text="Cofnij" />
       <Button fx:id="mainMenu" layoutX="397.0" layoutY="362.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="122.0" text="Główne Menu" />
+      <Button fx:id="add" layoutX="237.0" layoutY="265.0" mnemonicParsing="false" text="Dodaj" />
+      <ComboBox fx:id="facultyChooser" layoutX="218.0" layoutY="211.0" prefHeight="31.0" prefWidth="187.0" />
    </children>
 </AnchorPane>
