--- a/schedule_planner/SchedulePlanner/src/main/resources/pl/bolka/aleksander/schedule/planner/fx/fxml/AddDataChoose.fxml
+++ b/schedule_planner/SchedulePlanner/src/main/resources/pl/bolka/aleksander/schedule/planner/fx/fxml/AddDataChoose.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane fx:controller="pl.bolka.aleksander.schedule.planner.controller.fx.AddDataChooseController" fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="807.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:controller="pl.bolka.aleksander.schedule.planner.fx.controller.AddDataChooseController" fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="807.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button fx:id="addLecturers" layoutX="56.0" layoutY="95.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="150.0" text="Wykładowcy" />
       <Button fx:id="addSubject" layoutX="240.0" layoutY="95.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="150.0" text="Przedmioty" />
