--- a/schedule_planner/SchedulePlanner/src/main/resources/pl/bolka/aleksander/schedule/planner/fx/fxml/AddDataLecturers.fxml
+++ b/schedule_planner/SchedulePlanner/src/main/resources/pl/bolka/aleksander/schedule/planner/fx/fxml/AddDataLecturers.fxml
@@ -2,17 +2,19 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.bolka.aleksander.schedule.planner.controller.fx.AddDataLecturerController">
+<AnchorPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="757.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.bolka.aleksander.schedule.planner.fx.controller.AddDataLecturerController">
    <children>
       <TableView fx:id="lecturerTable" layoutX="0" layoutY="80.0" prefHeight="265.0" prefWidth="200.0" />
       <TextField fx:id="firstName" layoutX="218.0" layoutY="80.0" promptText="Imie" />
       <TextField fx:id="lastName" layoutX="218.0" layoutY="126.0" promptText="nazwisko" />
       <TextField fx:id="universityDegree" layoutX="218.0" layoutY="169.0" promptText="tytuł" />
-      <TableView fx:id="subjectTable" layoutX="427.0" layoutY="78.0" prefHeight="265.0" prefWidth="150.0" />
-      <Button fx:id="change" layoutX="328.0" layoutY="265.0" mnemonicParsing="false" text="Zmień" />
-      <Button fx:id="back" layoutX="237.0" layoutY="362.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="122.0" text="Cofnij" />
-      <Button fx:id="mainMenu" layoutX="397.0" layoutY="362.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="122.0" text="Główne Menu" />
-      <Button fx:id="add" layoutX="237.0" layoutY="265.0" mnemonicParsing="false" text="Dodaj" />
-      <ComboBox fx:id="facultyChooser" layoutX="218.0" layoutY="211.0" prefHeight="31.0" prefWidth="187.0" />
+      <TableView fx:id="lecturerSubjectTable" layoutX="427.0" layoutY="78.0" prefHeight="265.0" prefWidth="150.0" />
+      <Button fx:id="change" layoutX="281.0" layoutY="235.0" mnemonicParsing="false" text="Zmień" />
+      <Button fx:id="back" layoutX="20.0" layoutY="455.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="122.0" text="Wróć" />
+      <Button fx:id="mainMenu" layoutX="613.0" layoutY="455.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="122.0" text="Główne Menu" />
+      <Button fx:id="add" layoutX="218.0" layoutY="235.0" mnemonicParsing="false" text="Dodaj" />
+      <Button fx:id="addNewLecturer" layoutX="20.0" layoutY="362.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="161.0" text="Dodaj wykładowcę" />
+      <TableView fx:id="subjectTable" layoutX="599.0" layoutY="78.0" prefHeight="265.0" prefWidth="150.0" />
+      <Button fx:id="delete" layoutX="345.0" layoutY="235.0" mnemonicParsing="false" text="Usuń" />
    </children>
 </AnchorPane>
