--- a/schedule_planner/SchedulePlanner/src/main/resources/pl/bolka/aleksander/schedule/planner/fx/fxml/AddDataLecturers.fxml
+++ b/schedule_planner/SchedulePlanner/src/main/resources/pl/bolka/aleksander/schedule/planner/fx/fxml/AddDataLecturers.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <AnchorPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="757.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.bolka.aleksander.schedule.planner.fx.controller.AddDataLecturerController">
    <children>
-      <TableView fx:id="lecturerTable" layoutX="0" layoutY="80.0" prefHeight="265.0" prefWidth="200.0" />
+      <TableView fx:id="lecturers" layoutX="0" layoutY="80.0" prefHeight="265.0" prefWidth="200.0" />
       <TextField fx:id="firstName" layoutX="218.0" layoutY="80.0" promptText="Imie" />
       <TextField fx:id="lastName" layoutX="218.0" layoutY="126.0" promptText="nazwisko" />
       <TextField fx:id="universityDegree" layoutX="218.0" layoutY="169.0" promptText="tytuł" />
@@ -14,7 +14,7 @@
       <Button fx:id="mainMenu" layoutX="613.0" layoutY="455.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="122.0" text="Główne Menu" />
       <Button fx:id="add" layoutX="218.0" layoutY="235.0" mnemonicParsing="false" text="Dodaj" />
       <Button fx:id="addNewLecturer" layoutX="20.0" layoutY="362.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="161.0" text="Dodaj wykładowcę" />
-      <TableView fx:id="subjectTable" layoutX="599.0" layoutY="78.0" prefHeight="265.0" prefWidth="150.0" />
+      <TableView fx:id="subjects" layoutX="599.0" layoutY="78.0" prefHeight="265.0" prefWidth="150.0" />
       <Button fx:id="delete" layoutX="345.0" layoutY="235.0" mnemonicParsing="false" text="Usuń" />
    </children>
 </AnchorPane>
