--- a/schedule_planner/SchedulePlanner/src/main/resources/pl/bolka/aleksander/schedule/planner/fx/fxml/AddDataStudentGroups.fxml
+++ b/schedule_planner/SchedulePlanner/src/main/resources/pl/bolka/aleksander/schedule/planner/fx/fxml/AddDataStudentGroups.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.Text?>
 <AnchorPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="789.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.bolka.aleksander.schedule.planner.fx.controller.AddDataStudentGroupController">
     <children>
-        <TableView fx:id="groupTable" layoutY="80.0" prefHeight="352.0" prefWidth="200.0" />
+        <TableView fx:id="groups" layoutY="80.0" prefHeight="352.0" prefWidth="200.0" />
         <Button fx:id="back" layoutX="20.0" layoutY="455.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="122.0" text="Wróć" />
         <Button fx:id="mainMenu" layoutX="252.0" layoutY="455.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="122.0" text="Główne Menu" />
         <Button fx:id="add" layoutX="217.0" layoutY="401.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="60.0" text="Dodaj" />
