--- a/schedule_planner/SchedulePlanner/src/main/resources/pl/bolka/aleksander/schedule/planner/fx/fxml/AddDataSubject.fxml
+++ b/schedule_planner/SchedulePlanner/src/main/resources/pl/bolka/aleksander/schedule/planner/fx/fxml/AddDataSubject.fxml
@@ -2,9 +2,10 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="757.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.bolka.aleksander.schedule.planner.fx.controller.AddDataSubjectController">
+<AnchorPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="757.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="pl.bolka.aleksander.schedule.planner.fx.controller.AddDataSubjectController">
     <children>
-        <TableView fx:id="subjects" layoutY="80.0" prefHeight="265.0" prefWidth="200.0" />
+        <TableView fx:id="subjectTable" layoutY="80.0" prefHeight="265.0" prefWidth="200.0" />
         <TextField fx:id="name" layoutX="219.0" layoutY="80.0" promptText="nazwa" />
         <TextField fx:id="hours" layoutX="221.0" layoutY="126.0" promptText="ilość godzin" />
         <Button fx:id="change" layoutX="285.0" layoutY="314.0" mnemonicParsing="false" text="Zmień" />
@@ -17,7 +18,7 @@
         <Label layoutX="316.0" layoutY="109.0" text="Ilość godzin" />
         <Label layoutX="347.0" layoutY="61.0" text="Nazwa" />
         <ComboBox fx:id="facultyPicker" layoutX="219.0" layoutY="250.0" prefHeight="31.0" prefWidth="187.0" />
-        <TableView fx:id="lecturers" layoutX="599.0" layoutY="80.0" prefHeight="265.0" prefWidth="150.0" />
+        <TableView fx:id="lecturerTable" layoutX="599.0" layoutY="80.0" prefHeight="265.0" prefWidth="150.0" />
         <ComboBox fx:id="typePicker" layoutX="219.0" layoutY="210.0" prefHeight="31.0" prefWidth="187.0" />
       <TextField fx:id="semester" layoutX="221.0" layoutY="176.0" promptText="semestr" />
       <Label layoutX="316.0" layoutY="156.0" text="semestr" />
